# ocaml-alg

./: .gitignore  .travis.yml  CHANGES.md  Makefile  README.md  TODO  alg.opam  dune-project  index.html  index.md
.github/workflows/: build.yml
alg/: index.html
alg/alg/: index.html
alg/alg/Alg/: index.html
alg/alg/Alg/Algebra/: index.html
alg/alg/Alg/Algebra/Free/: index.html
alg/alg/Alg/Algebra/FreeAlgebra/: index.html
alg/alg/Alg/Algebra/Generate/: index.html
alg/alg/Alg/Algebra/OverRing/: index.html
alg/alg/Alg/Algebra/Pres/: index.html
alg/alg/Alg/Algebra/module-type-T/: index.html
alg/alg/Alg/Alphabet/: index.html
alg/alg/Alg/Alphabet/Char/: index.html
alg/alg/Alg/Alphabet/CharAlphabet/: index.html
alg/alg/Alg/Alphabet/Int/: index.html
alg/alg/Alg/Alphabet/IntAlphabet/: index.html
alg/alg/Alg/Alphabet/List/: index.html
alg/alg/Alg/Alphabet/ListAlphabet/: index.html
alg/alg/Alg/Alphabet/Map/: index.html
alg/alg/Alg/Alphabet/Pow/: index.html
alg/alg/Alg/Alphabet/PowAlphabet/: index.html
alg/alg/Alg/Alphabet/Prod/: index.html
alg/alg/Alg/Alphabet/Prod3/: index.html
alg/alg/Alg/Alphabet/String/: index.html
alg/alg/Alg/Alphabet/Unit/: index.html
alg/alg/Alg/Alphabet/module-type-T/: index.html
alg/alg/Alg/Automaton/: index.html
alg/alg/Alg/Automaton/Make/: index.html
alg/alg/Alg/Automaton/Regexp/: index.html
alg/alg/Alg/Category/: index.html
alg/alg/Alg/Category/Free/: index.html
alg/alg/Alg/Category/FreeCategory/: index.html
alg/alg/Alg/Category/Graph/: index.html
alg/alg/Alg/Category/Monoid/: index.html
alg/alg/Alg/Category/Pres/: index.html
alg/alg/Alg/Category/module-type-T/: index.html
alg/alg/Alg/Extlib/: index.html
alg/alg/Alg/Field/: index.html
alg/alg/Alg/Globular/: index.html
alg/alg/Alg/Graph/: index.html
alg/alg/Alg/Group/: index.html
alg/alg/Alg/Hypergraph/: index.html
alg/alg/Alg/Matrix/: index.html
alg/alg/Alg/Module/: index.html
alg/alg/Alg/Monoid/: index.html
alg/alg/Alg/Precategory/: index.html
alg/alg/Alg/Ring/: index.html
alg/alg/Alg/Series/: index.html
alg/alg/Alg/Simplicial/: index.html
alg/alg/Alg/Term/: index.html
alg/alg/Alg/Utils/: index.html
bergman/: bergman.js  index.html
docs/: .gitignore  Makefile  index.html
docs/alg/: Algebra.Free.Field.html  Algebra.Free.html  Algebra.FreeAlgebra.html  Algebra.Generate.A.html  Algebra.Generate.M.html  Algebra.Generate.Pres.html  Algebra.Generate.Presentation.html  Algebra.Generate.html  Algebra.Pres.A.html  Algebra.Pres.Algebra.html  Algebra.Pres.Anick.AKMod.html  Algebra.Pres.Anick.AMod.Map.html  Algebra.Pres.Anick.AMod.Mod.html  Algebra.Pres.Anick.AMod.html  Algebra.Pres.Anick.KMod.html  Algebra.Pres.Anick.MF.html  Algebra.Pres.Anick.MFL.html  Algebra.Pres.Anick.html  Algebra.Pres.Augmentation.html  Algebra.Pres.M.html  Algebra.Pres.html  Algebra.Presentation.A.html  Algebra.Presentation.Algebra.html  Algebra.Presentation.Anick.AKMod.html  Algebra.Presentation.Anick.AMod.Map.html  Algebra.Presentation.Anick.AMod.Mod.html  Algebra.Presentation.Anick.AMod.html  Algebra.Presentation.Anick.KMod.html  Algebra.Presentation.Anick.MF.html  Algebra.Presentation.Anick.MFL.html  Algebra.Presentation.Anick.html  Algebra.Presentation.Augmentation.html  Algebra.Presentation.M.html  Algebra.Presentation.html  Algebra.T.Field.html  Algebra.T.html  Algebra.html  Alphabet.Char.html  Alphabet.CharAlphabet.html  Alphabet.Int.html  (+439 more)
docs/alg/alg/: index.html
docs/bergman/: bergman.css  bergman.js
docs/kb/: index.html  kb.js
kb/: kb.css  kb.js
rewr2/: index.html  rewr2.js
src/: .gitignore  ARS.ml  Makefile  OCamlMakefile  algebra.ml  alphabet.ml  automaton.ml  category.ml  combinatoryLogic.ml  dune  extlib.ml  field.ml  globular.ml  graph.ml  group.ml  hypergraph.ml  matrix.ml  module.ml  monoid.ml  precategory.ml  precubical.ml  ring.ml  series.ml  simplicial.ml  term.ml  test.ml  test0.ml  test1.ml  test2.ml  test3.ml  test4.ml  test5.ml  test6.ml  utils.ml
src/test/: test.ml
test/: .gitignore  Makefile  anick0.ml  anick1.ml  anick2.ml  anick3.ml  braids.ml  catpres.ml  ccc.ml  cl.ml  cubical.ml  dihedral.ml  dune  gen.ml  jordan.ml  kb.ml  kleene.ml  mirai.ml  mon.ml  mone.ml  moni.ml  qgroup.ml  quaternion.ml  rig.ml  simpl.ml  squierGroup.ml  squierGroupFull.tex  squierMonoid.ml  stl.ml  stl2.ml  uatao.ml  uatao2.ml
test/2group/: Makefile  dune  groups.ml  groups2.ml  test.ml
tools/: Makefile
tools/bergman/: .gitignore  Makefile  bergman  bergman.css  bergman.ml  bergmanjs.ml  dune  index.html  interface.ml  lexer.mll  parser.mly  pol.ml  test.ml
tools/kb/: .gitignore  .merlin  Makefile  dune  index.html  interface.ml  kb.ml  lexer.mll  parser.mly  parserRefs.ml  test.ml
tools/rewr2/: Makefile  dune  index.html  rewr2.ml
(+871 files in other folders)
