(lang dune 2.8)
(version 0.1.0)
(name alg)
(source (github smimram/ocaml-alg))
(license GPL-2.0)
(authors "Samuel Mimram <smimram@gmail.com>")
(maintainers "Samuel Mimram <smimram@gmail.com>")

(generate_opam_files true)

(package
 (name alg)
 (synopsis "A library for manipulating various algebraic structures")
)
