(ocamlyacc parser)

(ocamllex lexer)

(library
 (name bergmanlib)
 (wrapped false)
 (libraries alg)
 (modules pol lexer parser)
)

(executable
 (name bergmanjs)
 (modes js)
 (preprocess (pps js_of_ocaml-ppx))
 (libraries bergmanlib js_of_ocaml)
 (modules bergmanjs)
 (preprocessor_deps index.html bergman.css)
)

(executable
 (name bergman)
 (libraries bergmanlib)
 (modules bergman)
)
